--- a/.gitconfig
+++ b/.gitconfig
@@ -17,3 +17,5 @@
 	recent = branch --sort=-committerdate --format=\"%(committerdate:relative)%09%(refname:short)\"
 [init]
 	defaultBranch = main
+[pull]
+	ff = only
