--- a/.gitconfig
+++ b/.gitconfig
@@ -15,6 +15,7 @@
 	lg = log --oneline --graph --decorate --all
 	lol = log --graph --pretty=format:'%C(yellow)%h%C(reset) -%C(red)%d%C(reset) %s %C(green)(%cr) %C(bold blue)<%an>%C(reset)' --abbrev-commit --all
 	recent = branch --sort=-committerdate --format=\"%(committerdate:relative)%09%(refname:short)\"
+	pum = pull upstream main
 [init]
 	defaultBranch = main
 [pull]
